Change title to 'CodeGen' and add PWA support
Updated the title and added PWA support with meta tags and service worker registration.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Test App</title>
+  <title>CodeGen</title>
+
+  <!-- Make it behave like a full-screen PWA -->
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#00ff90">
+
   <style>
     body {
       font-family: -apple-system, Helvetica, Arial;
@@ -11,6 +18,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
       background: #000;
       color: #00ff90;
       font-size: 30px;
@@ -19,5 +27,10 @@
 </head>
 <body>
   workingzzz
+
+  <!-- Register service worker for offline + app-like install -->
+  <script>
+    if ('serviceWorker' in navigator) navigator.serviceWorker.register('/sw.js');
+  </script>
 </body>
 </html>
