--- a/index.html
+++ b/index.html
@@ -5,35 +5,28 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>CodeGen</title>
 
-  <!-- PWA -->
+  <!-- iOS + PWA -->
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="CodeGen">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="theme-color" content="#00ff90">
   <link rel="apple-touch-icon" href="icon-192.png">
 
   <style>
-    body {
-      font-family: -apple-system, Helvetica, Arial;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: #000;
-      color: #00ff90;
-      font-size: 30px;
+    html,body{height:100%;margin:0}
+    body{
+      font-family:-apple-system,Helvetica,Arial;
+      display:flex;justify-content:center;align-items:center;
+      background:#000;color:#00ff90;font-size:30px
     }
   </style>
 </head>
 <body>
   workingzzz
-
-  <!-- IMPORTANT: relative path so SW scope becomes /CodeGen/ -->
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js').catch(console.error);
-    }
+    // Register within /CodeGen/ scope (no leading slash!)
+    if ('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');
   </script>
 </body>
 </html>
