--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     .footer{margin-top:10px;font-size:12px;color:#8d8d8d}
     .inline{display:inline-flex;gap:8px;align-items:center}
     .hint{font-size:12px;color:#aaa}
+    #array {
+      text-transform: uppercase;
+    }
+
         /* Modal (Array Assist) */
     .modal[hidden]{display:none!important}
     .modal{
@@ -319,6 +323,14 @@
       const r = generateRandomTMK(6);
       $('#tmk').value = r;
     };
+
+        // Force uppercase as user types in the Array input
+    document.getElementById('array').addEventListener('input', e => {
+      const cursor = e.target.selectionStart;
+      e.target.value = e.target.value.toUpperCase();
+      e.target.setSelectionRange(cursor, cursor);
+    });
+
 
         // ---------- Array Assist (modal) ----------
     function openAssist(){
