Add placeholder style to #array input

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       text-transform: uppercase;
     }
 
+    #array::placeholder {
+      text-transform: none;
+    }
+
+
         /* Modal (Array Assist) */
     .modal[hidden]{display:none!important}
     .modal{
